fix: unexpected duplicate "--at-apply" and unexpected description truncation across non-og scenes

--- a/src/styles/transitions.css
+++ b/src/styles/transitions.css
@@ -101,6 +101,7 @@ html[data-theme-changing] [data-disable-theme-transition] {
   #toc-desktop-icon {
     opacity: 0;
     animation: fadeInUpMini 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+    animation-delay: 0.175s;
   }
 
   #toc-links-list > * {
@@ -108,7 +109,7 @@ html[data-theme-changing] [data-disable-theme-transition] {
     animation: fadeInUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
   }
 
-  #toc-desktop-icon { animation-delay: 0.175s; }
+
   #toc-links-list > *:nth-child(1) { animation-delay: 0.175s; }
   #toc-links-list > *:nth-child(2) { animation-delay: 0.2s; }
   #toc-links-list > *:nth-child(3) { animation-delay: 0.225s; }
